--- a/templates/user-home.html
+++ b/templates/user-home.html
@@ -63,8 +63,8 @@
                     <div class="pos-content-container h-100">
                         <div class="row gx-4">
                             <div class="col-12">
-                                <a href="/" class="btn btn-success">Mexanika bo'limi</a>
-                                <a href="/sklad" class="btn btn-outline-success">Omborxona</a>
+                                <a href="/" class="btn btn-lg btn-theme">Mexanika bo'limi</a>
+                                <a href="/sklad" class="btn btn-lg btn-outline-theme">Omborxona</a>
                             </div>
                         </div>
 
