--- a/templates/user-sklad.html
+++ b/templates/user-sklad.html
@@ -61,8 +61,8 @@
 
                 <div class="pos-content">
                     <div class="pos-content-container h-100">
-                        <div class="row gx-4">
-                            <div class="col-12">
+                        <div class="row gx-4 my-4">
+                            <div class="col-12 text-center">
                                 <a href="/" class="btn btn-lg btn-outline-theme">Mexanika bo'limi</a>
                                 <a href="/sklad" class="btn btn-lg btn-theme">Omborxona</a>
                             </div>
