--- a/templates/admin-all-orders.html
+++ b/templates/admin-all-orders.html
@@ -23,7 +23,7 @@
 }
 
 #myTable th {
-    background-color: #0eaf58;
+    background-color:#007BFF;
     color: #fff;
     font-weight: bold;
     text-align: left;
@@ -94,7 +94,7 @@
 }
 
 .pagination .page-link {
-    color: #007bff;
+    color: #007BFF;
     border: 1px solid #dee2e6;
     border-radius: 50%;
     transition: background-color 0.3s, color 0.3s;
