--- a/templates/user-sklad.html
+++ b/templates/user-sklad.html
@@ -120,14 +120,23 @@
                                             <div class="flex-1">
                                                 <div class="h6 mb-1">{{ item.maxsulot.nomi }}</div>
                                                 <div class="small mb-2">{{ item.maxsulot.qoshimcha }}</div>
-                                                <div class="d-flex">
-                                                    <a href="#" class="btn btn-secondary btn-sm"><i class="fa fa-minus"></i></a>
-                                                    <input disabled type="text"
-                                                           class="form-control w-50px form-control-sm mx-2 bg-white bg-opacity-25 bg-white bg-opacity-25 text-center"
-                                                           value="{{ item.soni }}" id="quantity_{{ item.id }}">
-                                                    <a href="#" class="btn btn-secondary btn-sm ml-1"><i class="fa fa-plus"></i></a>
-<!--                                                    <a href="#" class="btn btn-theme btn-sm"><i class="fa-solid fa-rotate"></i></a>-->
-                                                </div>
+{#                                                <div class="d-flex">#}
+{#                                                    <a href="#" class="btn btn-secondary btn-sm"><i class="fa fa-minus"></i></a>#}
+{#                                                    <input disabled type="text"#}
+{#                                                           class="form-control w-50px form-control-sm mx-2 bg-white bg-opacity-25 bg-white bg-opacity-25 text-center"#}
+{#                                                           value="{{ item.soni }}" id="quantity_{{ item.id }}">#}
+{#                                                    <a href="#" class="btn btn-secondary btn-sm ml-1"><i class="fa fa-plus"></i></a>#}
+{#<!--                                                    <a href="#" class="btn btn-theme btn-sm"><i class="fa-solid fa-rotate"></i></a>-->#}
+{#                                                </div>#}
+
+                                                 <div class="d-flex">
+                                                <a href="#" class="btn btn-secondary btn-sm" onclick="decreaseQuantity('{{ item.id }}')"><i class="fa fa-minus"></i></a>
+                                                <input disabled type="text"
+                                                       class="form-control w-50px form-control-sm mx-2 bg-white bg-opacity-25 text-center"
+                                                       value="{{ item.soni }}" id="quantity_{{ item.id }}">
+                                                <a href="#" class="btn btn-secondary btn-sm ml-1" onclick="increaseQuantity('{{ item.id }}')"><i class="fa fa-plus"></i></a>
+                                            </div>
+
                                             </div>
                                         </div>
                                         <div class="pos-order-price d-flex flex-column">
@@ -392,6 +401,70 @@ quantityInput.addEventListener('input', function() {
 cancelBtn.addEventListener('click', function() {
     closeModal();
 });
+
+
+
+// Update cart quantity
+
+
+function updateCartQuantity(cartItemId, newQuantity) {
+    fetch('/update-cart-quantity/', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+            'X-CSRFToken': getCsrfToken() // CSRF token for security
+        },
+        body: JSON.stringify({
+            cart_item_id: cartItemId,
+            new_quantity: newQuantity
+        })
+    })
+        .then(response => response.json())
+        .then(data => {
+            if (data.success) {
+                console.log('Cart updated successfully!');
+            } else {
+                console.error('Error updating cart:', data.message);
+            }
+        })
+        .catch(error => console.error('Error:', error));
+}
+
+function decreaseQuantity(cartItemId) {
+    var quantityInput = document.getElementById('quantity_' + cartItemId);
+    if (quantityInput) {
+        var currentQuantity = parseInt(quantityInput.value) || 1;
+        if (currentQuantity > 1) {
+            var newQuantity = currentQuantity - 1;
+            quantityInput.value = newQuantity;
+
+            // Update the database
+            updateCartQuantity(cartItemId, newQuantity);
+        }
+    }
+}
+
+function increaseQuantity(cartItemId) {
+    var quantityInput = document.getElementById('quantity_' + cartItemId);
+    if (quantityInput) {
+        var newQuantity = parseInt(quantityInput.value) + 1;
+        quantityInput.value = newQuantity;
+
+        // Update the database
+        updateCartQuantity(cartItemId, newQuantity);
+    }
+}
+
+// Helper function to get CSRF token from cookies
+function getCsrfToken() {
+    const csrfCookie = document.cookie
+        .split('; ')
+        .find(row => row.startsWith('csrftoken='));
+    return csrfCookie ? csrfCookie.split('=')[1] : '';
+}
+
+
+
 
 // Mahsulot miqdorini yangilovchi funksiya
 function updateQuantity(change) {
